# LR4

./: CMakeLists.txt
LabWork4_PartC/: CMakeLists.txt
LabWork4_PartC/Task_4/: Task_4.c
LabWork4_PartC/Task_4/include/: func.h
LabWork4_PartC/Task_4/src/: Task_4.c  func.c
LabWork4_PartC/Task_4/tests/: test4.cpp
LabWork4_PartC/Task_5/: Task_5.c
LabWork4_PartC/Task_5/include/: func.h
LabWork4_PartC/Task_5/src/: Task_5.c  func.c
LabWork4_PartC/Task_5/tests/: test5.cpp
LabWork4_PartC/Task_6/: Task_6.c
LabWork4_PartC/Task_6/include/: func.h
LabWork4_PartC/Task_6/src/: Task_6.c  func.c
LabWork4_PartC/Task_6/tests/: test6.cpp
Task_1/: Task_1.cpp  func.cpp
Task_1/include/: func.h
Task_1/src/: Task_1.cpp  func.cpp
Task_1/tests/: test1.cpp
Task_2/: Task_2.cpp
Task_2/include/: func.h
Task_2/src/: Task_2.cpp  func.cpp
Task_2/tests/: test2.cpp
Task_3/: Task_3.cpp  func3.cpp
Task_3/include/: func3.h
Task_3/src/: Task_3.cpp  func3.cpp
Task_3/tests/: test3.cpp
tests/: test1.cpp  test3.cpp
